Redirect error to stderr (#43)
* Change invalid condition to empty instead of blank

* Remove suppressed warnings on stack trace

* Redirect error to stdout